--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "A RESTful API to fetch latest job notifications (India only) from various sources.",
   "main": "index.js",
   "scripts": {
-    "test": "jest --forceExit",
     "devrun": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
     "type": "git",
-    "url": "github.com/thrishank007/jobful-api",
+    "url": "github.com/thrishank007/jobful-api.git",
     "homepage": "https://github.com/thrishank007/jobful-api"
   },
   "keywords": [
@@ -40,6 +39,7 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "nodemailer": "^6.10.0",
     "signale": "^1.4.0"
   },
   "devDependencies": {
