--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "mongoose-sequence": "^6.0.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
+    "p-limit": "^6.2.0",
     "signale": "^1.4.0"
   },
   "devDependencies": {
