improved logic, reduced API Response time, added secuirty,

--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "node index.js",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "security:audit": "node scripts/security-audit.js",
+    "security:check": "npm audit --audit-level=moderate",
+    "deps:check": "npm outdated",
+    "deps:update": "npm update"
   },
   "repository": {
     "type": "git",
@@ -32,24 +36,28 @@
     "bcryptjs": "^2.4.3",
     "cheerio": "^1.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "express-rate-limit": "^7.5.0",
+    "express-rate-limit": "^7.5.1",
     "express-validator": "^7.2.1",
-    "helmet": "^7.0.0",
+    "firebase-admin": "^13.4.0",
+    "helmet": "^7.2.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "mongoose-sequence": "^6.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "p-limit": "^6.2.0",
-    "signale": "^1.4.0"
+    "signale": "^1.4.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "nodemon": "^3.1.7",
-    "supertest": "^7.0.0"
+    "supertest": "^7.1.1"
   }
 }
